--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@nativescript/theme": "~2.3.3",
+    "kinvey-nativescript-sdk": "^4.2.5",
     "nativescript-angular": "~8.21.0",
     "nativescript-camera": "^4.5.0",
     "nativescript-drop-down": "^5.0.4",
     "nativescript-geolocation": "^5.1.0",
+    "nativescript-mapbox": "^5.0.1",
     "nativescript-ui-sidedrawer": "~8.0.0",
+    "nativescript-videoplayer": "^4.2.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
     "tns-core-modules": "~6.5.0",
